# bevy_basic_portals

./: Cargo.toml  README.md
assets/: portal.wgsl
examples/basic/: main.rs
examples/cube/: main.rs  scenes.rs
examples/mirror/: main.rs
examples/moving/: main.rs
examples/picking/: main.rs
examples/shapes/: main.rs
helpers/: Cargo.toml  pivot_cameras.rs  textures.rs
helpers/src/: lib.rs  pivot_cameras.rs  textures.rs
src/: lib.rs
src/picking/: mod.rs
src/portals/: api.rs  create.rs  despawn.rs  material.rs  mod.rs  process.rs  projection.rs  update.rs
