[package]
name = "bevy_basic_portals"
version = "0.8.0"
edition = "2024"
categories = ["game-engines", "graphics", "rendering"]
keywords = ["bevy", "portal", "mirror", "gamedev"]
description = "A portal plugin for Bevy game engine"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Selene-Amanita/bevy_basic_portals"
authors = ["Selene Amanita"]

[dependencies]
bevy_app = "0.16"
bevy_asset = "0.16"
bevy_color = "0.16"
bevy_core_pipeline = "0.16"
bevy_ecs = "0.16"
bevy_image = "0.16"
bevy_math = "0.16"
bevy_pbr = "0.16"
bevy_picking = { version = "0.16", optional = true }
bevy_reflect = "0.16" # Could potentially be under a feature?
bevy_render = "0.16"
bevy_transform = "0.16"
bevy_window = "0.16"
tracing = { version = "0.1", default-features = false, features = ["std"] } # From bevy_utils
uuid = { version = "1.11.0", features = ["v4"], optional = true }
# All of the above can be replaced by:
# bevy = { version = "0.16", default-features = false, features = ["bevy_asset", "bevy_core_pipeline", "bevy_pbr", "bevy_render", ] }

[features]
default = ["picking_backend"]
picking_backend = ["dep:bevy_picking", "dep:uuid"]

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_gilrs",
    "bevy_mesh_picking_backend",
    "bevy_window",
    "bevy_winit",
    "x11",
    "tonemapping_luts",
    "ktx2",
    "zstd",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
