[package]
name = "bevy_basic_portals"
version = "0.10.0"
edition = "2024"
categories = ["game-engines", "graphics", "rendering"]
keywords = ["bevy", "portal", "mirror", "gamedev"]
description = "A portal plugin for Bevy game engine"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Selene-Amanita/bevy_basic_portals"
authors = ["Selene Amanita"]

[dependencies]
bevy_app = "0.18"
bevy_asset = "0.18"
bevy_camera = "0.18"
bevy_color = "0.18"
bevy_core_pipeline = "0.18"
bevy_ecs = "0.18"
bevy_image = { version = "0.18", features = ["zstd_rust"] }
bevy_light = { version = "0.18", optional = true }
bevy_math = "0.18"
bevy_mesh = "0.18"
bevy_pbr = "0.18"
bevy_picking = { version = "0.18", optional = true }
bevy_reflect = "0.18" # Could potentially be under a feature?
bevy_render = "0.18"
bevy_shader = "0.18"
bevy_transform = "0.18"
bevy_ui = { version = "0.18", optional = true }
bevy_window = "0.18"
tracing = { version = "0.1", default-features = false, features = ["std"] } # From bevy_log
uuid = { version = "1.11.0", features = ["v4"], optional = true }
# All of the above can be replaced by:
# bevy = { version = "0.17", default-features = false, features = ["bevy_asset", "bevy_core_pipeline", "bevy_pbr", "bevy_render", ] }

[features]
default = ["picking_backend", "debug"]
# Activates debug features requiring additional depencies
debug = ["debug_no_shadow", "debug_ui"]
# Allows to pick through portals [under construction for an undefined amount of time]
picking_backend = ["dep:bevy_picking", "dep:uuid"]
# Ensures the debug elements don't cast a shadow
debug_no_shadow = ["dep:bevy_light"]
# Allows displaying 
debug_ui = ["dep:bevy_ui"]

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_gilrs",
    "bevy_text",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "ktx2",
    "mesh_picking",
    "pan_camera",
    "tonemapping_luts",
    "x11"
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
