# This crate is only used for stuff the examples might need

[package]
name = "helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.*", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_gilrs",
    "bevy_winit",
    "x11",
] }